--- a/res/layout/fragment_work.xml
+++ b/res/layout/fragment_work.xml
@@ -2,99 +2,126 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="#FF9966CC">
-    
-   <FrameLayout 
-        android:layout_weight="1"
+    android:background="#FF9966CC"
+    android:orientation="vertical" >
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp">
-        
-       <ProgressBar 
-           android:layout_width="200dp"
-           android:layout_height="200dp"
-           android:layout_gravity="center"/>
-       
-        <LinearLayout 
+        android:layout_height="0dp"
+        android:layout_weight="1" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center" >
+
+            <com.cb.view.CircleProgressBarView
+                android:id="@+id/circleProgressBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/timer_linearlayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:orientation="horizontal">
-            
+            android:orientation="vertical" >
+
             <TextView 
-	            android:id="@+id/timer_minute"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_gravity="center"
-	            android:textSize="40sp"
-	            android:textColor="#FFFFFFFF"
-	            android:text="25 : "/>
-        
-	        <TextView 
-	            android:id="@+id/timer_second"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_gravity="center"
-	            android:textSize="40sp"
-	            android:textColor="#FFFFFFFF"
-	            android:text="00"/>
-	        
+                android:id="@+id/status_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="工作中..."
+                android:textColor="#FFFFFFFF"
+                android:textSize="12sp"
+                android:layout_marginBottom="5dp"/>
+            
+            <LinearLayout 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+	            <TextView
+	                android:id="@+id/timer_minute"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_gravity="center"
+	                android:text="25 : "
+	                android:textColor="#FFFFFFFF"
+	                android:textSize="40sp" />
+	
+	            <TextView
+	                android:id="@+id/timer_second"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_gravity="center"
+	                android:text="00"
+	                android:textColor="#FFFFFFFF"
+	                android:textSize="40sp" />
+            </LinearLayout>	
+            
         </LinearLayout>
-        
-        <Button 
+
+        <Button
             android:id="@+id/timer_done"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
+            android:background="@drawable/launch_button_background_circle"
             android:text="短休息"
-            android:textSize="50sp"
             android:textColor="#FFFFFFFF"
-            android:visibility="gone"
-            android:background="@drawable/launch_button_background_circle"/>
-        
+            android:textSize="50sp"
+            android:visibility="gone" />
     </FrameLayout>
-    
-    <LinearLayout 
-        android:layout_weight="1"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical">
-        
-        <TextView 
+        android:layout_weight="1"
+        android:orientation="vertical" >
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:textSize="25sp"
+            android:text="6级单词"
             android:textColor="#FFFFFFFF"
-            android:text="6级单词"/>
-        <LinearLayout 
+            android:textSize="25sp" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:gravity="center">
-            
+            android:gravity="center"
+            android:orientation="horizontal" >
         </LinearLayout>
 
-        <LinearLayout 
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
-            android:gravity="center">
-	        
-            <ImageButton
-	            android:id="@+id/stop_timer"
-	            android:layout_width="80dp"
-	            android:layout_height="80dp"
-	            android:background="@drawable/launch_button_background_circle"
-	            android:scaleType="centerInside"
-	            android:src="@drawable/icon_stop" />
-            
-        </LinearLayout>
+            android:layout_weight="3" >
 
+            <ImageButton
+                android:id="@+id/stop_timer"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:background="@drawable/launch_button_background_circle"
+                android:scaleType="centerInside"
+                android:src="@drawable/icon_stop" />
+            
+            <Button 
+                android:id="@+id/record_task"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:background="@drawable/launch_button_background_circle"
+                android:text="完成"
+                android:textSize="25sp"
+                android:visibility="gone"/>
+        </FrameLayout>
     </LinearLayout>
-    
 
 </LinearLayout>
