--- a/res/layout/fragment_work.xml
+++ b/res/layout/fragment_work.xml
@@ -91,6 +91,7 @@
             android:textSize="25sp" />
 
         <LinearLayout
+            android:id="@+id/status_image_linearlayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
