--- a/res/layout/launch.xml
+++ b/res/layout/launch.xml
@@ -24,8 +24,9 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:src="@drawable/icon_setting"
-            android:layout_alignParentRight="true"
-            android:paddingLeft="20dp"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:background="@drawable/set_background_white"/>
     </RelativeLayout>
     
