--- a/res/layout/task_todo.xml
+++ b/res/layout/task_todo.xml
@@ -3,7 +3,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical"
-	android:background="#e3ffc23a"
+	android:background="#FFCCCC99"
 	android:padding="10dp"
 	xmlns:swipe="http://schemas.android.com/apk/res/com.cb.potatoclock">
 
@@ -36,7 +36,8 @@
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:text="提交"
-	            android:background="#ff55639b"/>
+	            android:textColor="#FF000000"
+	            android:background="#FF99CCCC"/>
 	
 	    </LinearLayout>
 	</LinearLayout>
