--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,9 +3,9 @@
     tools:context="com.cb.potatoclock.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/exit"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="退出"/>"
 
 </menu>
